--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -43,13 +43,12 @@
 .featured-projects__control {
   display: block;
   aspect-ratio: 1;
-  font-size: var(--font-size-1);
-  padding: calc(var(--spacing-n2) + var(--spacing-n3));
+  padding: var(--spacing-n1);
   margin: var(--spacing-n2) 0;
 
   &:disabled {
     pointer-events: none;
-    color: var(--color-gray-medium);
+    color: var(--color-gray-light);
     opacity: 0.5;
   }
 }
