--- a/src/assets/css/_component.link.pcss
+++ b/src/assets/css/_component.link.pcss
@@ -4,8 +4,12 @@
   text-decoration: none;
 
   &:hover,
-  &:active {
+  &:focus {
     color: var(--color-primary);
+  }
+
+  &:active {
+    color: var(--color-primary-tint);
   }
 
   &--color {
