--- a/src/assets/css/_setup.icons.pcss
+++ b/src/assets/css/_setup.icons.pcss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "devstar";
-  src: url("/assets/fonts/devstar.ttf?bemza0") format("truetype"),
-    url("/assets/fonts/devstar.woff?bemza0") format("woff");
+  src: url("/assets/fonts/devstar.ttf?qvbl0d") format("truetype"),
+    url("/assets/fonts/devstar.woff?qvbl0d") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -20,42 +20,48 @@
   }
 }
 
-.icon--heart::before {
+.icon--stack:before {
+  content: "\e900";
+}
+.icon--heart:before {
   content: "\f004";
 }
-.icon--image::before {
+.icon--image:before {
   content: "\f03e";
 }
-.icon--social-twitter::before {
+.icon--social-twitter:before {
   content: "\f081";
 }
-.icon--social-facebook::before {
+.icon--social-facebook:before {
   content: "\f082";
 }
-.icon--social-linkedin::before {
+.icon--social-linkedin:before {
   content: "\f08c";
 }
-.icon--social-github::before {
+.icon--social-github:before {
   content: "\f092";
 }
-.icon--video::before {
+.icon--video:before {
   content: "\f16a";
 }
-.icon--stack::before {
-  content: "\e92e";
-}
-.icon--quotes-left::before {
+.icon--quotes-left:before {
   content: "\e977";
 }
-.icon--trophy::before {
+.icon--trophy:before {
   content: "\e99e";
 }
-.icon--star-full::before {
+.icon--star-full:before {
   content: "\e9d9";
 }
-.icon--arrow-up::before {
+.icon--arrow-up:before {
   content: "\ea3a";
 }
-.icon--arrow-down::before {
+.icon--arrow-right:before {
+  content: "\ea3c";
+}
+.icon--arrow-down:before {
   content: "\ea3e";
+}
+.icon--arrow-left:before {
+  content: "\ea40";
 }
