--- a/src/assets/css/_utils.pcss
+++ b/src/assets/css/_utils.pcss
@@ -18,7 +18,11 @@
 }
 
 .u-container--large {
-  max-width: 960px;
+  max-width: 1140px;
+}
+
+.u-container--medium-large {
+  max-width: 920px;
 }
 
 .u-t-uppercase {
