--- a/src/_includes/layouts/partials/head.njk
+++ b/src/_includes/layouts/partials/head.njk
@@ -37,14 +37,8 @@
             <meta name="twitter:description" content="{{ siteparams.siteDescription }}"/>
             <meta name="twitter:title" content="{{ siteparams.siteTitle }}"/>
           {% endif %}
-          <link rel="icon" type="image/png" href="/images/icons/Eleventy-favicon-16x16.png" sizes="16x16"/>
-          <link rel="icon" type="image/png" href="/images/icons/Eleventy-favicon-32x32.png" sizes="32x32"/>
-          <link rel="icon" type="image/png" href="/images/icons/Eleventy-favicon-96x96.png" sizes="96x96"/>
-          <link rel="preconnect" href="https://fonts.googleapis.com"/>
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-          <link
-            href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Spartan:wght@500;700&display=swap"
-            rel="stylesheet"/>
+          {% include 'layouts/partials/favicons.njk' %}
+          {% include 'layouts/partials/fonts.njk' %}
           {% if eleventyEnv == "production" %}
             <link rel="preload" href="/css/{{ csshash.indexCSS }}" as="style"/>
             <link rel="stylesheet" href="/css/{{ csshash.indexCSS }}" type="text/css"/>
