--- a/src/assets/css/_block.banner.pcss
+++ b/src/assets/css/_block.banner.pcss
@@ -1,10 +1,11 @@
 .banner {
   background-color: var(--color-gray-light);
-  padding: var(--spacing-4) 0 var(--spacing-5);
+  padding-top: var(--spacing-4);
+  padding-bottom: var(--spacing-5);
   text-align: center;
 
   &__container {
-    font-size: var(--font-size-3);
-    line-height: var(--spacing-3);
+    font-size: clamp(var(--font-size-2), 2vw + 1rem, var(--font-size-3));
+    line-height: clamp(var(--spacing-2), 4vw + 1rem, var(--spacing-3));
   }
 }
