--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -4,7 +4,7 @@
 
   &__wrapper {
     display: grid;
-    grid-template-columns: auto minMax(50%, 690px);
+    grid-template-columns: auto 50%;
     position: relative;
     grid-gap: var(--spacing-6);
   }
@@ -69,7 +69,7 @@
 
   &__title {
     color: var(--color-primary);
-    font-size: var(--font-size-6);
+    font-size: clamp(var(--font-size-4), 8vw + 1rem, var(--font-size-6));
     padding-bottom: var(--spacing-2);
     line-height: 1;
   }
@@ -82,11 +82,11 @@
   }
 
   &__list {
-    font-size: var(--font-size-2);
+    font-size: clamp(var(--font-size-1), 1vw + 1rem, var(--font-size-2));
   }
 
   &__list-item {
-    padding-bottom: var(--spacing-1);
+    padding-bottom: var(--spacing-n1);
   }
 }
 
