--- a/src/assets/css/_block.projects.pcss
+++ b/src/assets/css/_block.projects.pcss
@@ -3,7 +3,7 @@
   padding-bottom: var(--spacing-5);
 
   &__title {
-    font-size: var(--font-size-4);
+    font-size: clamp(var(--font-size-2), 3vw + 1rem, var(--font-size-4));
     padding-bottom: var(--spacing-2);
   }
 
