--- a/src/assets/css/_component.card.pcss
+++ b/src/assets/css/_component.card.pcss
@@ -37,6 +37,7 @@
   }
 
   &__figure {
+    position: relative;
     background-color: var(--color-gray-lightest);
     border-radius: 100%;
     width: var(--spacing-6);
@@ -53,8 +54,21 @@
   }
 
   &__image {
+    position: relative;
     border-radius: 100%;
     overflow: hidden;
     border: 4px solid var(--color-gray-lightest);
+    z-index: var(--level-2);
+  }
+
+  &__figure-placeholder {
+    position: absolute;
+    top: 50%;
+    transform: translate3d(0, -50%, 0);
+    color: var(--color-gray-medium);
+    left: 0;
+    right: 0;
+    font-size: var(--font-size-2);
+    text-align: center;
   }
 }
