--- a/src/assets/css/_layout.header.pcss
+++ b/src/assets/css/_layout.header.pcss
@@ -10,7 +10,7 @@
   }
 
   &__title {
-    font-size: var(--font-size-3);
+    font-size: clamp(var(--font-size-2), 3vw + 1rem, var(--font-size-3));
     color: var(--color-primary);
     font-family: var(--font-family-primary);
     padding-bottom: calc(var(--spacing-n1) + var(--spacing-n2));
