--- a/src/assets/css/_variables.typography.pcss
+++ b/src/assets/css/_variables.typography.pcss
@@ -12,8 +12,10 @@
 
   --line-height: 1.625;
 
-  --font-family-primary: "Oswald", sans-serif;
-  --font-family-secondary: "Spartan", sans-serif;
+  --font-family-primary: "Oswald", "Avenir Next Condensed Medium",
+    "Arial Narrow", "Franklin Gothic Bold", sans-serif;
+  --font-family-secondary: "Spartan", "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   --font-weight-regular: 400;
   --font-weight-medium: 500;
