--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -9,6 +9,6 @@ layout: base
 {% include 'layouts/partials/footer.njk' %}
 
 <script src="/assets/js/swiper-bundle.min.js"></script>
-<script src="/assets/js/about-slider.js"></script>
-<script src="/assets/js/featured-slider.js"></script>
-<script src="/assets/js/testimonials-slider.js"></script>
+<script async src="/assets/js/about-slider.js"></script>
+<script async src="/assets/js/featured-slider.js"></script>
+<script async src="/assets/js/testimonials-slider.js"></script>
