--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -1,8 +1,15 @@
 <footer class="footer u-t-center">
-    <section class="u-container u-container-spacing u-container--larger">
+    <section class="u-container u-container-spacing u-container--medium-large">
         <p class="footer__credits">Created and maintained with
             <span class="icon icon--heart footer__icon"></span>
             by Adrian Bece since 2015</p>
         {% include 'layouts/partials/linkList.njk' %}
+        <p class="footer__thanks">
+            Special thanks to Vitaly Friedman, Chris Coyier, Josh Comeau, Henri Helvetica, Jen Simmons, Stephanie Eckles, Brad
+            Frost, Addy Osmani, Enno Stuurman, Gatsby team, and my Gin Coding fam for support, motivation and inspiration.
+        </p>
+        <blockquote class="footer__quote">
+            Per aspera ad astra.
+        </blockquote>
     </section>
 </footer>
