--- a/src/_includes/layouts/partials/header.njk
+++ b/src/_includes/layouts/partials/header.njk
@@ -9,13 +9,13 @@
         <nav>
             <ul class="header__links u-list-reset">
                 <li>
-                    <a class="u-link-reset header__link" href="/#test1">About me</a>
+                    <a class="u-link-reset header__link" href="/#js-about">About me</a>
                 </li>
                 <li>
-                    <a class="u-link-reset header__link" href="/#test2">Portfolio</a>
+                    <a class="u-link-reset header__link" href="/#js-portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a class="u-link-reset header__link" href="/#test3">Testimonials</a>
+                    <a class="u-link-reset header__link" href="/#js-testimonials">Testimonials</a>
                 </li>
             </ul>
         </nav>
