--- a/src/_includes/layouts/partials/linkList.njk
+++ b/src/_includes/layouts/partials/linkList.njk
@@ -5,6 +5,7 @@
             target="_blank"
             class="u-link-reset links__link link"
             rel="noopener noreferrer">
+            <span class="visually-hidden">Twitter</span>
             <span class="icon icon--social-twitter"></span>
         </a>
     </li>
@@ -14,6 +15,7 @@
             target="_blank"
             class="u-link-reset  links__link link"
             rel="noopener noreferrer">
+            <span class="visually-hidden">LinkedIn</span>
             <span class="icon icon--social-linkedin"></span>
         </a>
     </li>
@@ -23,6 +25,7 @@
             target="_blank"
             class="u-link-reset  links__link link"
             rel="noopener noreferrer">
+            <span class="visually-hidden">GitHub</span>
             <span class="icon icon--social-github"></span>
         </a>
     </li>
