--- a/src/assets/css/_layout.footer.pcss
+++ b/src/assets/css/_layout.footer.pcss
@@ -12,4 +12,16 @@
   &__credits {
     padding-bottom: var(--spacing-1);
   }
+
+  &__thanks {
+    margin-top: var(--spacing-1);
+    font-size: var(--font-size-n1);
+    color: var(--color-gray-darker);
+  }
+
+  &__quote {
+    padding-top: var(--spacing-1);
+    color: var(--color-primary);
+    font-size: var(--font-size-n1);
+  }
 }
