--- a/src/assets/css/_utils.pcss
+++ b/src/assets/css/_utils.pcss
@@ -1,3 +1,13 @@
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .u-list-reset {
   list-style: none;
   padding: 0;
@@ -23,6 +33,10 @@
 
 .u-container--medium-large {
   max-width: 920px;
+}
+
+.u-container--medium {
+  max-width: 830px;
 }
 
 .u-t-uppercase {
