--- a/src/assets/css/_setup.typography.pcss
+++ b/src/assets/css/_setup.typography.pcss
@@ -2,7 +2,7 @@ body {
   font-family: var(--font-family-secondary);
   font-size: var(--font-size-0);
   line-height: var(--line-height);
-  color: var(--color-grayscale-darkest);
+  color: var(--color-gray-darkest);
 }
 
 h1,
