--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -26,4 +26,5 @@
 @import "_block.projects.pcss";
 @import "_block.featured.pcss";
 @import "_block.portfolio.pcss";
+@import "_block.project-summary.pcss";
 @import "_block.project-card.pcss";
