--- a/src/_includes/layouts/_default/base.njk
+++ b/src/_includes/layouts/_default/base.njk
@@ -3,5 +3,9 @@
   {% include 'layouts/partials/head.njk' %}
   <body>
     {{ content | safe }}
+    <script>
+      if ("serviceWorker" in navigator) 
+        navigator.serviceWorker.register("/sw.js");
+    </script>
   </body>
 </html>
